@@ -55,6 +55,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #5647: MutableSet.__iand__() no longer mutates self during iteration.
+
 - Issue #5624: Fix the _winreg module name still used in several modules.
 
 - Issue #5628: Fix io.TextIOWrapper.read() with a unreadable buffer.
